--- a/public/css/index.css
+++ b/public/css/index.css
@@ -25,6 +25,7 @@
   padding: 0;
   font-family: Now;
   font-weight: 300;
+  caret-color: var(--blue);
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
