--- a/public/css/index.scss
+++ b/public/css/index.scss
@@ -24,6 +24,7 @@
     padding: 0;
     font-family: Now;
     font-weight: 300;
+    caret-color: var(--blue);
   }
 
   /* Hide scrollbar for Chrome, Safari and Opera */
