--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -374,19 +374,20 @@ scrollbar-width: none;  /* Firefox */
           right: 90%;
           display: flex;
           border-radius: 25px;
-          color: white;
+          color: silver;
           //backdrop-filter: blur(1px);
           //background: #26313d;
           z-index: 150;
           opacity: 1;
           text-align: left;
-          height: 33px;
+          flex-direction: row;
+          height: 100%;
           width: 62px;
           transition: 200ms;
           white-space: pre;
           align-content: center;
           justify-content: center;
-          align-items: center;
+          align-items: flex-start;
         }
       }
       &:target .textMessage{
@@ -526,7 +527,7 @@ scrollbar-width: none;  /* Firefox */
   }
   //create a about tooltip on hover
   &:hover::after{
-    content: 'PokeTab Messanger \A Version: 3.2.3 \A Developer: Fuad Hasan \A Email: fuad.cs22@gmail.com \A Icons: https:flaticon.com';
+    content: 'PokeTab Messanger \A Version: 3.2.4 \A Developer: Fuad Hasan \A Email: fuad.cs22@gmail.com \A Icons: https:flaticon.com';
     position: absolute;
     bottom: 0;
     right: 0;
