--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -632,6 +632,33 @@ button:disabled {
   word-wrap: break-word;
 }
 
+.popup-message {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  position: absolute;
+  bottom: 100px;
+  left: 50%;
+  background: var(--background-light);
+  padding: 10px;
+  border-radius: 15px;
+  -webkit-backdrop-filter: blur(2px);
+          backdrop-filter: blur(2px);
+  font-size: 0.6rem;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+}
+
 .chat__footer {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -853,6 +880,7 @@ img {
   }
   .chat__main {
     padding: 0 10%;
+    position: relative;
   }
   #messages .textMessage, #messages .replyMessage {
     max-width: 30vw;
