--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -362,11 +362,16 @@ scrollbar-width: none;  /* Firefox */
       justify-content: flex-start;
       width: 100%;
       gap: 5px;
-      .textMessage:hover{
-        cursor: pointer;
-      }
       .textMessage{
         position: relative;
+        a{
+          text-decoration: underline;
+          color: white;
+          display: inherit;
+          &:hover{
+            cursor: pointer;
+          }
+        }
         &:hover::after{
           content: url('./../images/reply.png');
           position: absolute;
@@ -388,6 +393,9 @@ scrollbar-width: none;  /* Firefox */
           align-content: center;
           justify-content: center;
           align-items: flex-start;
+          &:hover{
+            cursor: pointer;
+          }
         }
       }
       &:target .textMessage{
@@ -580,7 +588,7 @@ img{
   align-items: flex-start;
   justify-content: space-between;
   align-items: center;
-  padding: 10px;
+  padding: 10px 30px 10px 10px;
   background: var(--background-light);
   border-radius: 10px;
   backdrop-filter: blur(2px);
@@ -589,6 +597,8 @@ img{
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
+    overflow: hidden;
+    text-overflow: ellipsis;
     .toast-popup-name{
       color: var(--blue);
     }
@@ -599,6 +609,8 @@ img{
   .toast-popup-close{
     color: orangered;
     font-weight: 100;
+    position: absolute;
+    right: 10px;
     &:hover{
       cursor: pointer;
     }
