--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -399,7 +399,7 @@ button:disabled {
   list-style-type: none;
   color: grey;
   font-size: 0.7rem;
-  padding: 0 0 5px 15px;
+  padding: 0 0 5px 10px;
 }
 
 #typingindicator li {
@@ -416,6 +416,7 @@ button:disabled {
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
+  gap: 5px;
 }
 
 .ticontainer {
@@ -426,6 +427,16 @@ button:disabled {
   width: -webkit-min-content;
   width: -moz-min-content;
   width: min-content;
+  height: 33px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .tiblock {
