--- a/public/css/index.scss
+++ b/public/css/index.scss
@@ -191,9 +191,11 @@ html{
       background: var(--blue);
       &:hover{
           cursor: pointer;
+          background: var(--hoverblue);
+          border: 2px solid var(--hoverblue);
       }
       &:focus{
             outline: none;
-            border: 2px solid var(--blue);
+            border: 2px solid var(--hoverblue);
       }
 }
