--- a/public/css/404.css
+++ b/public/css/404.css
@@ -1,105 +1,69 @@
-* {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+@font-face {
+  font-family: 'Comforter';
+  src: url("./../fonts/Comforter-Regular.ttf");
 }
 
-body {
+@font-face {
+  font-family: 'Now';
+  src: url('./../fonts/Now-Regular.otf');
+}
+
+
+
+*{
+  box-sizing: border-box;
   padding: 0;
   margin: 0;
-  overflow:hidden
 }
 
-#notfound {
-  position: relative;
+.container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100vw;
   height: 100vh;
-  background: #030005;
+  background: #fefefd;
+  overflow: hidden;
+  font-family: Montserat;
 }
-
-#notfound .notfound {
+.text{
+  font-family: Comforter;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+h2{
+  font-size: 30px;
   position: absolute;
-  left: 50%;
-  top: 50%;
-  -webkit-transform: translate(-50%, -50%);
-      -ms-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  color: #000;
 }
-
-.notfound {
-  max-width: 767px;
-  width: 100%;
-  line-height: 1.4;
-  text-align: center;
-}
-
-.notfound .notfound-404 {
-  position: relative;
-  height: 180px;
-  margin-bottom: 20px;
-  z-index: -1;
-}
-
-.notfound .notfound-404 h1 {
-  font-family: 'Montserrat', sans-serif;
+h1{
+  font-size: 150px;
   position: absolute;
-  left: 50%;
-  top: 50%;
-  -webkit-transform: translate(-50% , -50%);
-      -ms-transform: translate(-50% , -50%);
-          transform: translate(-50% , -50%);
-  font-size: 224px;
-  font-weight: 900;
-  margin-top: 0px;
-  margin-bottom: 0px;
-  margin-left: -12px;
-  color: #030005;
-  text-transform: uppercase;
-  text-shadow: -1px -1px 0px #ed5d56, 1px 1px 0px #76b2d5;
-  letter-spacing: -20px;
+  color: #5ecdfb;
 }
 
-
-.notfound .notfound-404 h2 {
-  font-family: 'Montserrat', sans-serif;
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 110px;
-  font-size: 42px;
-  font-weight: 700;
-  color: #fff;
-  text-transform: uppercase;
-  text-shadow: 0px 2px 0px #8400ff;
-  letter-spacing: 13px;
-  margin: 0;
-}
-
-.notfound a {
-  font-family: 'Montserrat', sans-serif;
-  display: inline-block;
-  text-transform: uppercase;
-  color: #ed5d56;
+a{
   text-decoration: none;
+  color: #000;
   border: 2px solid;
-  background: transparent;
-  padding: 10px 40px;
-  font-size: 14px;
-  font-weight: 700;
-  -webkit-transition: 0.2s all;
-  transition: 0.3s all;
+  font-family: Now;
+  position: relative;
+  top: 50px;
+  padding: 10px;
+}
+a:hover{
+  cursor: pointer;
 }
 
-.notfound a:hover {
-  color: #76b2d5;
+img{
+  height: 50vw;
 }
 
-@media only screen and (max-width: 767px) {
-    .notfound .notfound-404 h2 {
-        font-size: 24px;
-    }
+@media (orientation: landscape) and (min-device-aspect-ratio: 1/1) {
+img{
+  height: 50vh;
 }
-
-@media only screen and (max-width: 480px) {
-  .notfound .notfound-404 h1 {
-      font-size: 182px;
-  }
 }
