animated reply to simple

--- a/public/css/index.scss
+++ b/public/css/index.scss
@@ -118,6 +118,7 @@ html{
     background: transparent;
     border-radius: 10px;
     color: white;
+    min-height: 44px;
   }
   
   input:-webkit-autofill,
