--- a/public/css/index.css
+++ b/public/css/index.css
@@ -271,11 +271,24 @@ input[type='button']:focus, input[type='submit']:focus {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: 100vw;
   padding: 30px;
   text-align: justify;
   font-size: 0.7rem;
   color: #bababa;
+  border-top: 2px solid var(--background-light);
+  border-left: 0;
+  border-right: 0;
+  border-bottom: 0;
+}
+
+.howtouse .h1 {
+  font-size: 1rem;
+  padding: 5px;
+  text-align: center;
 }
 
 .howtouse ul {
