--- a/public/css/index.scss
+++ b/public/css/index.scss
@@ -208,11 +208,21 @@ html{
 .howtouse{
   display: flex;
   flex-direction: column;
+  align-items: center;
   width: 100vw;
   padding: 30px;
   text-align: justify;
   font-size: 0.7rem;
   color: rgb(186, 186, 186);
+  border-top: 2px solid var(--background-light);
+  border-left: 0;
+  border-right: 0;
+  border-bottom: 0;
+  .h1{
+    font-size: 1rem;
+    padding: 5px;
+    text-align: center;
+  }
   ul{
     list-style-type: disc;
   }
