--- a/public/css/index.css
+++ b/public/css/index.css
@@ -8,6 +8,11 @@
   src: url("./../fonts/Now-Regular.otf");
 }
 
+@font-face {
+  font-family: 'Pokemon';
+  src: url("./../fonts/Pokemon.ttf");
+}
+
 :root {
   --blue: #6aa4db;
   --hoverblue: #0575e6;
@@ -233,7 +238,7 @@ input[type="radio"]:checked + label img {
 }
 
 textarea:focus, input:focus {
-  border: 2px solid var(--hoverblue);
+  border: none;
   outline: none;
 }
 
@@ -260,7 +265,7 @@ input[type='button']:hover, input[type='submit']:hover {
 
 input[type='button']:focus, input[type='submit']:focus {
   outline: none;
-  border: 2px solid var(--hoverblue);
+  border: none;
 }
 
 .howtouse {
