--- a/public/css/index.scss
+++ b/public/css/index.scss
@@ -1,235 +1,235 @@
 @font-face {
-    font-family: 'Comforter';
-    src: url("./../fonts/Comforter-Regular.ttf");
-  }
-  
-  @font-face {
-    font-family: 'Now';
-    src: url('./../fonts/Now-Regular.otf');
-  }
-  
-  :root{
-    --blue: #6aa4db;
-    --hoverblue: #0575e6;
-    --background: #111d2a;
-    --foreground: #ffffff;
-    --background-light: #ffffff17;
-    --topbarsize: 50px;
-    --app-height: 100vh;
-  }
+  font-family: 'Comforter';
+  src: url("./../fonts/Comforter-Regular.ttf");
+}
 
-  * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    font-family: Now;
-    font-weight: 300;
-    caret-color: var(--blue);
-  }
+@font-face {
+font-family: 'Now';
+src: url('./../fonts/Now-Regular.otf');
+}
 
-  /* Hide scrollbar for Chrome, Safari and Opera */
+:root{
+--blue: #6aa4db;
+--hoverblue: #0575e6;
+--background: #111d2a;
+--foreground: #ffffff;
+--background-light: #ffffff17;
+--topbarsize: 50px;
+--app-height: 100vh;
+}
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: Now;
+  font-weight: 300;
+  caret-color: var(--blue);
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
 *::-webkit-scrollbar {
-    display: none;
-  }
-  
-  /* Hide scrollbar for IE, Edge and Firefox */
-  * {
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
-  }
-  
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+* {
+-ms-overflow-style: none;  /* IE and Edge */
+scrollbar-width: none;  /* Firefox */
+}
+
 html{
-    height: -webkit-fill-available;
-  }
-  
-  body {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background: var(--background);
-    background-size: contain;
-    color: var(--foreground);
-    height: var(--app-height);
-    user-select: none;
-    overflow-x: hidden;
-    overflow-y: scroll;
-    overscroll-behavior-y: contain;
-  }
-
-.form2{
-    border-bottom: 2px solid var(--background-light);
-    border-top: 2px solid var(--background-light);
-    padding: 5px 0 5px 0;
-  }
-
-  .h3 {
-    text-align: center;
-    font-size: 1rem;
-    //color: var(--blue);
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    gap: 10px;
-    padding: 5px;
-  }
-  
-  #login-form{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    padding: 10px;
-    border-radius: 10px;
-    background: var(--background-light);
-    gap: 10px;
-    transition: 100ms;
-  }
-  
-  .container{
-    display: flex;
-    align-items: center;
-    height: var(--app-height);
-    width: 100vw;
-    justify-content: center;
-    background: var(--background);
-    padding-top: 20px;
-  }
-
-  #form{
-    background: var(--background-light);
-    padding: 10px;
-    border-radius: 10px;
-  }
-  
-.form-field {
-    margin: 20px 0;
+  height: -webkit-fill-available;
 }
 
-  .form-field>* {
-    width: 100%;
-  }
-  
-  .form-field label {
-    display: block;
-    margin-bottom: 7px;
-  }
-  
-  .form-field input,
-  .form-field select {
-    border: 2px solid var(--blue);
-    padding: 10px;
-    background: transparent;
-    border-radius: 10px;
-    color: white;
-    min-height: 44px;
-  }
-  
-  input:-webkit-autofill,
-  input:-webkit-autofill:hover, 
-  input:-webkit-autofill:focus,
-  textarea:-webkit-autofill,
-  textarea:-webkit-autofill:hover,
-  textarea:-webkit-autofill:focus,
-  select:-webkit-autofill,
-  select:-webkit-autofill:hover,
-  select:-webkit-autofill:focus {
-    border: 2px solid var(--blue);
-    -webkit-text-fill-color: white;
-    -webkit-box-shadow: 0 0 0px 1000px transparent inset;
-    box-shadow: 0 0 0px 1000px transparent inset;
-    transition: background-color 5000s ease-in-out 0s;
-  }
-
-  
-  .avatars{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    height: 150px;
-    width: 200px;
-    align-items: center;
-    justify-content: center;
-    align-content: flex-start;
-    overflow: scroll;
-    img{
-      width: 40px;
-      height: 40px;
-      filter: saturate(0);
-      &:hover{
-        cursor: pointer;
-        filter: saturate(100%);
-      }
-    }
-  }
-
-  input[type="radio"] {
-    display: none;
-    &:checked + label img{
-      filter: saturate(100%);
-    }
-  }
-
-
-  #error-callback{
-    font-size: 0.7rem;
-    color: orangered;
-    width: 100%;
-    word-wrap: break-word;
-    padding-top: 10px;
-  }
-  textarea:focus, input:focus{
-    border: 2px solid var(--hoverblue);
-    outline: none;
-  }
-
-  img{
-    user-drag: none;
-    -webkit-user-drag: none;
-    user-select: none;
-    -moz-user-select: none;
-    -webkit-user-select: none;
-    -ms-user-select: none;
-  }
-  input[type='button'], input[type='submit']{
-      transition: 200ms;
-      background: var(--blue);
-      &:hover{
-          cursor: pointer;
-          background: var(--hoverblue);
-          border: 2px solid var(--hoverblue);
-      }
-      &:focus{
-            outline: none;
-            border: 2px solid var(--hoverblue);
-      }
-}
-
-.howtouse{
+body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100vw;
-  padding: 30px;
-  text-align: justify;
-  font-size: 0.7rem;
-  color: rgb(186, 186, 186);
+  background: var(--background);
+  background-size: contain;
+  color: var(--foreground);
+  height: var(--app-height);
+  user-select: none;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  overscroll-behavior-y: contain;
+}
+
+.form2{
+  border-bottom: 2px solid var(--background-light);
   border-top: 2px solid var(--background-light);
-  border-left: 0;
-  border-right: 0;
-  border-bottom: 0;
-  .h1{
-    font-size: 1rem;
-    padding: 5px;
-    text-align: center;
-  }
-  ul{
-    list-style-type: disc;
+  padding: 5px 0 5px 0;
+}
+
+.h3 {
+  text-align: center;
+  font-size: 1rem;
+  //color: var(--blue);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  padding: 5px;
+}
+
+#login-form{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+  border-radius: 10px;
+  background: var(--background-light);
+  gap: 10px;
+  transition: 100ms;
+}
+
+.container{
+  display: flex;
+  align-items: center;
+  height: var(--app-height);
+  width: 100vw;
+  justify-content: center;
+  background: var(--background);
+  padding-top: 20px;
+}
+
+#form{
+  background: var(--background-light);
+  padding: 10px;
+  border-radius: 10px;
+}
+
+.form-field {
+  margin: 20px 0;
+}
+
+.form-field>* {
+  width: 100%;
+}
+
+.form-field label {
+  display: block;
+  margin-bottom: 7px;
+}
+
+.form-field input,
+.form-field select {
+  border: 2px solid var(--blue);
+  padding: 10px;
+  background: transparent;
+  border-radius: 10px;
+  color: white;
+  min-height: 44px;
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+  border: 2px solid var(--blue);
+  -webkit-text-fill-color: white;
+  -webkit-box-shadow: 0 0 0px 1000px transparent inset;
+  box-shadow: 0 0 0px 1000px transparent inset;
+  transition: background-color 5000s ease-in-out 0s;
+}
+
+
+.avatars{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  height: 150px;
+  width: 200px;
+  align-items: center;
+  justify-content: center;
+  align-content: flex-start;
+  overflow: scroll;
+  img{
+    width: 40px;
+    height: 40px;
+    filter: saturate(0);
+    &:hover{
+      cursor: pointer;
+      filter: saturate(100%);
+    }
   }
 }
 
+input[type="radio"] {
+  display: none;
+  &:checked + label img{
+    filter: saturate(100%);
+  }
+}
+
+
+#error-callback{
+  font-size: 0.7rem;
+  color: orangered;
+  width: 100%;
+  word-wrap: break-word;
+  padding-top: 10px;
+}
+textarea:focus, input:focus{
+  border: none;
+  outline: none;
+}
+
+img{
+  user-drag: none;
+  -webkit-user-drag: none;
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+}
+input[type='button'], input[type='submit']{
+    transition: 200ms;
+    background: var(--blue);
+    &:hover{
+        cursor: pointer;
+        background: var(--hoverblue);
+        border: 2px solid var(--hoverblue);
+    }
+    &:focus{
+          outline: none;
+          border: none;
+    }
+}
+
+.howtouse{
+display: flex;
+flex-direction: column;
+align-items: center;
+width: 100vw;
+padding: 30px;
+text-align: justify;
+font-size: 0.7rem;
+color: rgb(186, 186, 186);
+border-top: 2px solid var(--background-light);
+border-left: 0;
+border-right: 0;
+border-bottom: 0;
+.h1{
+  font-size: 1rem;
+  padding: 5px;
+  text-align: center;
+}
+ul{
+  list-style-type: disc;
+}
+}
+
 .footer{
-  font-size: 0.6rem;
-  color: rgb(186, 186, 186);
-  padding: 10px;
+font-size: 0.6rem;
+color: rgb(186, 186, 186);
+padding: 10px;
 }
