--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -641,6 +641,7 @@ button:disabled {
       -ms-flex-direction: row;
           flex-direction: row;
   z-index: 2;
+  gap: 5px;
   -webkit-box-align: end;
       -ms-flex-align: end;
           align-items: flex-end;
