--- a/public/css/index.scss
+++ b/public/css/index.scss
@@ -178,8 +178,9 @@ input[type="radio"] {
   word-wrap: break-word;
   padding-top: 10px;
 }
-textarea:focus, input:focus{
-  border: none;
+
+input[type='text'] {
+  border: 2px solid var(--hoverblue);
   outline: none;
 }
 
