--- a/public/login.ejs
+++ b/public/login.ejs
@@ -47,20 +47,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 
-    <link rel="preload" as="font" type="font/otf" href="./fonts/Now-Regular.otf">
-    <link rel="preload" as="font" type="font/ttf" href="./fonts/Comforter-Regular.ttf">
-    <link rel="stylesheet" href="./css/index.css">
+    <link rel="preload" as="font" type="font/otf" href="/fonts/Now-Regular.otf">
+    <link rel="preload" as="font" type="font/ttf" href="/fonts/Comforter-Regular.ttf">
+    <link rel="stylesheet" href="/css/index.css">
     <link rel="manifest" href="manifest.json" crossorigin="use-credentials">
-    <link rel="icon" href="./images/avatars/pikachu.png">
+    <link rel="icon" href="/images/avatars/pikachu.png">
     
     <title>Join | PokeTab Messanger</title>
 </head>
 <body>
     <div class="container">
-        <form action="./chat" method="post" autocomplete="on" id="form" onsubmit="return check();">
+        <form action="/chat" method="post" autocomplete="on" id="form" onsubmit="return check();">
             <div class="form-1" style="display: block;">
                 <div class="form-field">
-                    <div class="h3">Join a Chat <img src="./images/pokeball.png" alt="" srcset=""></div>
+                    <div class="h3">Join a Chat <img src="/images/pokeball.png" alt="" srcset=""></div>
                     <div id="error-callback"></div>
                 </div>
                 <div class="form-field">
@@ -79,65 +79,65 @@
                 <div class="form-field">
                     <div class="avatars">
                     <input type="radio" name="avatar" value="bellsprout" id="bellsprout">
-                    <label for="bellsprout"><img src="./images/avatars/bellsprout(custom).png" alt="" srcset=""></label>
+                    <label for="bellsprout"><img src="/images/avatars/bellsprout(custom).png" alt="" srcset=""></label>
                     <input type="radio" name="avatar" value="bullbasaur" id="bullbasaur">
-                    <label for="bullbasaur"><img src="./images/avatars/bullbasaur(custom).png" alt="" srcset=""></label>
+                    <label for="bullbasaur"><img src="/images/avatars/bullbasaur(custom).png" alt="" srcset=""></label>
                     <input type="radio" name="avatar" value="caterpie" id="caterpie">
-                    <label for="caterpie"><img src="./images/avatars/caterpie(custom).png" alt="" srcset=""></label>
+                    <label for="caterpie"><img src="/images/avatars/caterpie(custom).png" alt="" srcset=""></label>
                     <input type="radio" name="avatar" value="charmander" id="charmander">
-                    <label for="charmander"><img src="./images/avatars/charmander(custom).png" alt="" srcset=""></label>
+                    <label for="charmander"><img src="/images/avatars/charmander(custom).png" alt="" srcset=""></label>
                     <input type="radio" name="avatar" value="eevee" id="eevee">
-                    <label for="eevee"><img src="./images/avatars/eevee(custom).png" alt="" srcset=""></label>
+                    <label for="eevee"><img src="/images/avatars/eevee(custom).png" alt="" srcset=""></label>
                     <input type="radio" name="avatar" value="jigglypuff" id="jigglypuff">
-                    <label for="jigglypuff"><img src="./images/avatars/jigglypuff(custom).png" alt="" srcset=""></label>
+                    <label for="jigglypuff"><img src="/images/avatars/jigglypuff(custom).png" alt="" srcset=""></label>
                     <input type="radio" name="avatar" value="mankey" id="mankey">
-                    <label for="mankey"><img src="./images/avatars/mankey(custom).png" alt="" srcset=""></label>
+                    <label for="mankey"><img src="/images/avatars/mankey(custom).png" alt="" srcset=""></label>
                     <input type="radio" name="avatar" value="meowth" id="meowth">
-                    <label for="meowth"><img src="./images/avatars/meowth(custom).png" alt="" srcset=""></label>
+                    <label for="meowth"><img src="/images/avatars/meowth(custom).png" alt="" srcset=""></label>
                     <input type="radio" name="avatar" value="mew" id="mew">
-                    <label for="mew"><img src="./images/avatars/mew(custom).png" alt="" srcset=""></label>
+                    <label for="mew"><img src="/images/avatars/mew(custom).png" alt="" srcset=""></label>
                     <input type="radio" name="avatar" value="pidgey" id="pidgey">
-                    <label for="pidgey"><img src="./images/avatars/pidgey(custom).png" alt="" srcset=""></label>
+                    <label for="pidgey"><img src="/images/avatars/pidgey(custom).png" alt="" srcset=""></label>
                     <input type="radio" name="avatar" value="pikachu" id="pikachu">
-                    <label for="pikachu"><img src="./images/avatars/pikachu(custom).png" alt="" srcset=""></label>
+                    <label for="pikachu"><img src="/images/avatars/pikachu(custom).png" alt="" srcset=""></label>
                     <input type="radio" name="avatar" value="psyduck" id="psyduck">
-                    <label for="psyduck"><img src="./images/avatars/psyduck(custom).png" alt="" srcset=""></label>
+                    <label for="psyduck"><img src="/images/avatars/psyduck(custom).png" alt="" srcset=""></label>
                     <input type="radio" name="avatar" value="rattata" id="rattata">
-                    <label for="rattata"><img src="./images/avatars/rattata(custom).png" alt="" srcset=""></label>
+                    <label for="rattata"><img src="/images/avatars/rattata(custom).png" alt="" srcset=""></label>
                     <input type="radio" name="avatar" value="snorlax" id="snorlax">
-                    <label for="snorlax"><img src="./images/avatars/snorlax(custom).png" alt="" srcset=""></label>
+                    <label for="snorlax"><img src="/images/avatars/snorlax(custom).png" alt="" srcset=""></label>
                     <input type="radio" name="avatar" value="squirtle" id="squirtle">
-                    <label for="squirtle"><img src="./images/avatars/squirtle(custom).png" alt="" srcset=""></label>
+                    <label for="squirtle"><img src="/images/avatars/squirtle(custom).png" alt="" srcset=""></label>
                     <input type="radio" name="avatar" value="zubat" id="zubat">
-                    <label for="zubat"><img src="./images/avatars/zubat(custom).png" alt="" srcset=""></label>
+                    <label for="zubat"><img src="/images/avatars/zubat(custom).png" alt="" srcset=""></label>
                     <input type="radio" name="avatar" value="arceus" id="arceus">
-                    <label for="arceus"><img src="./images/avatars/arceus(custom).png" alt="" srcset=""></label>
+                    <label for="arceus"><img src="/images/avatars/arceus(custom).png" alt="" srcset=""></label>
                     <input type="radio" name="avatar" value="articuno" id="articuno">
-                    <label for="articuno"><img src="./images/avatars/articuno(custom).png" alt="" srcset=""></label>
+                    <label for="articuno"><img src="/images/avatars/articuno(custom).png" alt="" srcset=""></label>
                     <input type="radio" name="avatar" value="blastoise" id="blastoise">
-                    <label for="blastoise"><img src="./images/avatars/blastoise(custom).png" alt="" srcset=""></label>
+                    <label for="blastoise"><img src="/images/avatars/blastoise(custom).png" alt="" srcset=""></label>
                     <input type="radio" name="avatar" value="bulbasaur2" id="bulbasaur2">
-                    <label for="bulbasaur2"><img src="./images/avatars/bulbasaur2(custom).png" alt="" srcset=""></label>
+                    <label for="bulbasaur2"><img src="/images/avatars/bulbasaur2(custom).png" alt="" srcset=""></label>
                     <input type="radio" name="avatar" value="charizard" id="charizard">
-                    <label for="charizard"><img src="./images/avatars/charizard(custom).png" alt="" srcset=""></label>
+                    <label for="charizard"><img src="/images/avatars/charizard(custom).png" alt="" srcset=""></label>
                     <input type="radio" name="avatar" value="charmander2" id="charmander2">
-                    <label for="charmander2"><img src="./images/avatars/charmander2(custom).png" alt="" srcset=""></label>
+                    <label for="charmander2"><img src="/images/avatars/charmander2(custom).png" alt="" srcset=""></label>
                     <input type="radio" name="avatar" value="haunter" id="haunter">
-                    <label for="haunter"><img src="./images/avatars/haunter(custom).png" alt="" srcset=""></label>
+                    <label for="haunter"><img src="/images/avatars/haunter(custom).png" alt="" srcset=""></label>
                     <input type="radio" name="avatar" value="ivysaur" id="ivysaur">
-                    <label for="ivysaur"><img src="./images/avatars/ivysaur(custom).png" alt="" srcset=""></label>
+                    <label for="ivysaur"><img src="/images/avatars/ivysaur(custom).png" alt="" srcset=""></label>
                     <input type="radio" name="avatar" value="mewtwo" id="mewtwo">
-                    <label for="mewtwo"><img src="./images/avatars/mewtwo(custom).png" alt="" srcset=""></label>
+                    <label for="mewtwo"><img src="/images/avatars/mewtwo(custom).png" alt="" srcset=""></label>
                     <input type="radio" name="avatar" value="palkia" id="palkia">
-                    <label for="palkia"><img src="./images/avatars/palkia(custom).png" alt="" srcset=""></label>
+                    <label for="palkia"><img src="/images/avatars/palkia(custom).png" alt="" srcset=""></label>
                     <input type="radio" name="avatar" value="pichu" id="pichu">
-                    <label for="pichu"><img src="./images/avatars/pichu(custom).png" alt="" srcset=""></label>
+                    <label for="pichu"><img src="/images/avatars/pichu(custom).png" alt="" srcset=""></label>
                     <input type="radio" name="avatar" value="raichu" id="raichu">
-                    <label for="raichu"><img src="./images/avatars/raichu(custom).png" alt="" srcset=""></label>
+                    <label for="raichu"><img src="/images/avatars/raichu(custom).png" alt="" srcset=""></label>
                     <input type="radio" name="avatar" value="rayquaza" id="rayquaza">
-                    <label for="rayquaza"><img src="./images/avatars/rayquaza(custom).png" alt="" srcset=""></label>
+                    <label for="rayquaza"><img src="/images/avatars/rayquaza(custom).png" alt="" srcset=""></label>
                     <input type="radio" name="avatar" value="squirtle2" id="squirtle2">
-                    <label for="squirtle2"><img src="./images/avatars/squirtle2(custom).png" alt="" srcset=""></label>
+                    <label for="squirtle2"><img src="/images/avatars/squirtle2(custom).png" alt="" srcset=""></label>
                 </div>
                 </div>
                 <div class="form-field">
@@ -162,7 +162,7 @@
         <p>&copy; Copyright Fuad Hasan 2022. All rights reserved.</p>
     </div>
     <script defer src="/socket.io/socket.io.js"></script>
-    <script defer src="./js/libs/jquery-3.1.0.min.js"></script>
-    <script defer src="./index.min.js"></script>
+    <script defer src="/js/libs/jquery-3.1.0.min.js"></script>
+    <script defer src="/login.min.js"></script>
 </body>
 </html>
