--- a/public/login.ejs
+++ b/public/login.ejs
@@ -163,6 +163,6 @@
     </div>
     <script defer src="/socket.io/socket.io.js"></script>
     <script defer src="/js/libs/jquery-3.1.0.min.js"></script>
-    <script defer src="/login.min.js"></script>
+    <script defer src="/login.js"></script>
 </body>
 </html>
