--- a/public/chat.ejs
+++ b/public/chat.ejs
@@ -59,6 +59,7 @@
   <div id="myname" hidden><%=myname%></div>
   <div id="mykey" hidden><%=mykey%></div>
   <div id="myavatar" hidden><%=myavatar%></div>
+  <div id="maxuser" hidden><%=maxuser%></div>
   <div id="preloader" style="z-index: 100; overflow: hidden; visibility: visible; position: absolute;height: 100vh;width: 100vw;display: flex;position: fixed; flex-direction: column; background: #111d2a;justify-content: center;align-items: center;">
     <!--create a preloder screen-->
     <img src="/images/loader.gif" height="100px" width="100px" alt="" srcset="">
@@ -73,14 +74,14 @@
     </div>
     <div class="menuwrapper">
       <div class="chat__sidebar">
-        <h3>#<span class="keyname1"></span></h3>
+        <h3>#<span class="keyname1 key"></span></h3>
         <div class="users"></div>
       </div>
     </div>
     <div class="chat">
       <div class="menuwrapper2">
         <div class="chat__sidebar">
-          <h3>#<span class="keyname2"></span></h3>
+          <h3>#<span class="keyname2 key"></span></h3>
           <div class="users"></div>
         </div>
       </div>
