--- a/public/css/index.scss
+++ b/public/css/index.scss
@@ -18,6 +18,7 @@ src: url('./../fonts/Now-Regular.otf');
 --app-height: 100vh;
 }
 
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -141,6 +142,10 @@ select:-webkit-autofill:focus {
   transition: background-color 5000s ease-in-out 0s;
 }
 
+input[type='number']::-webkit-inner-spin-button{
+  -webkit-appearance: none;
+
+}
 
 .avatars{
   display: flex;
@@ -179,7 +184,7 @@ input[type="radio"] {
   padding-top: 10px;
 }
 
-input[type='text'] {
+input[type='text'], input[type='number'] {
   border: 2px solid var(--hoverblue);
   outline: none;
 }
@@ -207,26 +212,36 @@ input[type='button'], input[type='submit']{
 }
 
 .howtouse{
-display: flex;
-flex-direction: column;
-align-items: center;
 width: 100vw;
 padding: 30px;
 text-align: justify;
 font-size: 0.7rem;
-color: rgb(186, 186, 186);
-border-top: 2px solid var(--background-light);
-border-left: 0;
-border-right: 0;
-border-bottom: 0;
-.h1{
-  font-size: 1rem;
-  padding: 5px;
-  text-align: center;
-}
+
 ul{
   list-style-type: disc;
 }
+}
+
+.line{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-top: 2px solid var(--background-light);
+  border-left: 0;
+  border-right: 0;
+  border-bottom: 0;
+  color: rgb(186, 186, 186);
+  .h1{
+    font-size: 1rem;
+    padding: 5px;
+    text-align: center;
+  }
+}
+
+
+#create{
+  text-align: center;
+  color: var(--blue);
 }
 
 .footer{
