--- a/public/create.ejs
+++ b/public/create.ejs
@@ -64,8 +64,8 @@
                     <div id="error-callback"></div>
                 </div>
                 <div class="form-field">
-                    <label for="key" id="key-label">Unique Key</label>
-                    <input type="text" name="key" id="key" minlength="5">
+                    <label for="key" id="key-label">Tap tp Copy</label>
+                    <input type="text" name="key" class="copy-key" id="key" minlength="5" readonly>
                 </div>
                 <div class="form-field">
                     <input type="button" value="Next" id="next">
@@ -168,6 +168,7 @@
             <li>On Pc, use can use Ctrl+Enter to send message.</li>
         </ul>
     </fieldset>
+    <div class="popup-message" style="display: none;"></div>
     <div class="footer">
         <p>&copy; Copyright Fuad Hasan 2022. All rights reserved.</p>
     </div>
