--- a/public/css/index.scss
+++ b/public/css/index.scss
@@ -184,6 +184,29 @@ input[type="radio"] {
   padding-top: 10px;
 }
 
+.popup-message{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  bottom: 100px;
+  left: 50%;
+  background: var(--background-light);
+  padding: 10px;
+  border-radius: 15px;
+  backdrop-filter: blur(2px);
+  font-size: 0.6rem;
+  transform: translateX(-50%);
+  z-index: 100;
+}
+
+.copy-key{
+  &:hover{
+    cursor: pointer;
+  }
+}
+
 input[type='text'], input[type='number'] {
   border: 2px solid var(--hoverblue);
   outline: none;
