--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -95,6 +95,9 @@ button:hover {
 
 .chat__sidebar ul{
   list-style-type: none;
+  border-top: 2px solid var(--background-light);
+  margin: 5px;
+  overflow-y: scroll;
   li{
     display: flex;
     flex-direction: row;
@@ -103,6 +106,7 @@ button:hover {
     font-size: 1rem;
     font-weight: 900;
     gap: 5px;
+    overflow-x: scroll;
   }
 }
 
@@ -601,6 +605,15 @@ scrollbar-width: none;  /* Firefox */
   }
 }
 
+#maxuser{
+  font-size: 0.7rem;
+  position: relative;
+  right: 0;
+  width: 100%;
+  text-align: center;
+  padding: 10px;
+  color: var(--blue);
+}
 
 .info{
   margin: 0;
@@ -620,7 +633,7 @@ scrollbar-width: none;  /* Firefox */
   }
   //create a about tooltip on hover
   &:hover::after{
-    content: 'PokeTab Messanger \A Version: 3.2.7 \A Developer: Fuad Hasan \A Email: fuad.cs22@gmail.com \A Icons: flaticon.com';
+    content: 'PokeTab Messanger \A Version: 4.0.1 \A Developer: Fuad Hasan \A Email: fuad.cs22@gmail.com \A Icons: flaticon.com';
     position: absolute;
     bottom: 0;
     right: 0;
