--- a/public/chat.ejs
+++ b/public/chat.ejs
@@ -59,7 +59,6 @@
   <div id="myname" hidden><%=myname%></div>
   <div id="mykey" hidden><%=mykey%></div>
   <div id="myavatar" hidden><%=myavatar%></div>
-  <div id="maxuser" hidden><%=maxuser%></div>
   <div id="preloader" style="z-index: 100; overflow: hidden; visibility: visible; position: absolute;height: 100vh;width: 100vw;display: flex;position: fixed; flex-direction: column; background: #111d2a;justify-content: center;align-items: center;">
     <!--create a preloder screen-->
     <img src="/images/loader.gif" height="100px" width="100px" alt="" srcset="">
@@ -75,6 +74,7 @@
     <div class="menuwrapper">
       <div class="chat__sidebar">
         <h3>#<span class="keyname1 key"></span></h3>
+        <div id="maxuser">Max User:<%=maxuser%></div>
         <div class="users"></div>
       </div>
     </div>
@@ -82,6 +82,7 @@
       <div class="menuwrapper2">
         <div class="chat__sidebar">
           <h3>#<span class="keyname2 key"></span></h3>
+          <div id="maxuser">Max User:<%=maxuser%></div>
           <div class="users"></div>
         </div>
       </div>
