--- a/public/create.ejs
+++ b/public/create.ejs
@@ -159,11 +159,11 @@
     <fieldset class="howtouse line"> 
         <legend class="h1">How to use</legend>
         <ul>
-            <li>To start a conversation user/users must have entered the same Key.</li>
-            <li>Create your own unique key so that other cannot join your chat by just guessing the key.</li>
+            <li>Enter to copied Key to join desired chat.</li>
+            <li>Copy the generated Key to and share with your friends to join your chat.</li>
             <li>Conversation will be deleted from your device after you disconnect/exit.</li>
             <li>You cannot see previous messages after re joining.</li>
-            <li>You can vibrate other users phone by tapping ther name from the active online users list</li>
+            <li>You can vibrate other users phone by tapping ther name from the active online users list.</li>
             <li>Tap on the message to reply to a specific message.</li>
             <li>On Pc, use can use Ctrl+Enter to send message.</li>
         </ul>
