--- a/public/css/index.css
+++ b/public/css/index.css
@@ -251,7 +251,7 @@ input[type="radio"]:checked + label img {
       -ms-flex-pack: center;
           justify-content: center;
   position: absolute;
-  bottom: 100px;
+  bottom: 50%;
   left: 50%;
   background: var(--background-light);
   padding: 10px;
@@ -264,11 +264,18 @@ input[type="radio"]:checked + label img {
   z-index: 100;
 }
 
+.copy-key {
+  border: none !important;
+  outline: none !important;
+  background: var(--background-light) !important;
+  text-align: center !important;
+}
+
 .copy-key:hover {
   cursor: pointer;
 }
 
-input[type='text'], input[type='number'] {
+input[type='text'] {
   border: 2px solid var(--hoverblue);
   outline: none;
 }
@@ -304,6 +311,9 @@ input[type='button']:focus, input[type='submit']:focus {
   padding: 30px;
   text-align: justify;
   font-size: 0.7rem;
+  max-width: -webkit-max-content;
+  max-width: -moz-max-content;
+  max-width: max-content;
 }
 
 .howtouse ul {
