--- a/public/chat.ejs
+++ b/public/chat.ejs
@@ -44,8 +44,10 @@
   <link rel="apple-touch-startup-image" href="icons/apple-splash-1136-640.jpg" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)">
   <link rel="preload" as="image" type="image/png" href="/images/sending-s.png">
   <link rel="preload" as="image" type="image/png" href="/images/sent-s.png">
+  <link rel="preload" as="image" type="image/png" href="/images/icons8-place-marker.gif">
   <link rel="preload" as="font" type="font/otf" href="/fonts/Now-Regular.otf">
-  <link rel="preload" as="font" type="font/ttf" href="/fonts/Comforter-Regular.ttf">
+  <link rel="preload" as="font" type="font/otf" href="/fonts/Comforter.ttf">
+  <link rel="preload" as="font" type="font/ttf" href="/fonts/comic.ttf">
   <meta charset="utf-8">
   <title>Inbox | PokeTab Messanger</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0">
@@ -107,7 +109,7 @@
           <form id="message-form">
             <!--input name="message" type="text" placeholder="Message" autofocus autocomplete="off" /-->
             <div class="location" id="send-location"><img id="sendlocation" height='25px' width="25px" src="/images/icons8-gps-48.png" alt="" srcset=""></div>
-            <textarea name="message" id="textbox" placeholder="Type..."></textarea>
+            <textarea name="message" id="textbox" placeholder="Type message..."></textarea>
             <button class="send"><img src="/images/icons8-send-32.png" alt="" srcset=""></button>
           </form>
         </div>
