--- a/public/create.ejs
+++ b/public/create.ejs
@@ -48,8 +48,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 
     <link rel="preload" as="font" type="font/otf" href="/fonts/Now-Regular.otf">
-    <link rel="preload" as="font" type="font/ttf" href="/fonts/Comforter-Regular.ttf">
-    <link rel="stylesheet" href="/css/index.css">
+    <link rel="preload" as="font" type="font/ttf" href="/fonts/comic.ttf">
+    <link rel="stylesheet" href="/css/index.min.css">
     <link rel="manifest" href="manifest.json" crossorigin="use-credentials">
     <link rel="icon" href="/images/avatars/pikachu.png">
     
@@ -64,7 +64,7 @@
                     <div id="error-callback"></div>
                 </div>
                 <div class="form-field">
-                    <label for="key" id="key-label">Tap tp Copy</label>
+                    <label for="key" id="key-label">Tap to Copy</label>
                     <input type="text" name="key" class="copy-key" id="key" minlength="5" readonly>
                 </div>
                 <div class="form-field">
