--- a/public/login.ejs
+++ b/public/login.ejs
@@ -48,8 +48,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 
     <link rel="preload" as="font" type="font/otf" href="/fonts/Now-Regular.otf">
-    <link rel="preload" as="font" type="font/ttf" href="/fonts/Comforter-Regular.ttf">
-    <link rel="stylesheet" href="/css/index.css">
+    <link rel="preload" as="font" type="font/ttf" href="/fonts/comic-Regular.ttf">
+    <link rel="stylesheet" href="/css/index.min.css">
     <link rel="manifest" href="manifest.json" crossorigin="use-credentials">
     <link rel="icon" href="/images/avatars/pikachu.png">
     
