--- a/public/css/index.scss
+++ b/public/css/index.scss
@@ -8,6 +8,16 @@ font-family: 'Now';
 src: url('./../fonts/Now-Regular.otf');
 }
 
+@font-face {
+  font-family: 'James';
+  src: url('./../fonts/James.ttf');
+}
+
+@font-face {
+  font-family: 'Comic';
+  src: url('./../fonts/comic.ttf');
+}
+
 :root{
 --blue: #6aa4db;
 --hoverblue: #0575e6;
@@ -18,12 +28,11 @@ src: url('./../fonts/Now-Regular.otf');
 --app-height: 100vh;
 }
 
-
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: Now;
+  font-family: Comic;
   font-weight: 300;
   caret-color: var(--blue);
 }
@@ -144,7 +153,6 @@ select:-webkit-autofill:focus {
 
 input[type='number']::-webkit-inner-spin-button{
   -webkit-appearance: none;
-
 }
 
 .avatars{
@@ -192,7 +200,7 @@ input[type="radio"] {
   position: absolute;
   bottom: 50%;
   left: 50%;
-  background: var(--background-light);
+  background: #00000072;
   padding: 10px;
   border-radius: 15px;
   backdrop-filter: blur(2px);
@@ -211,9 +219,13 @@ input[type="radio"] {
   }
 }
 
-input[type='text'] {
-  border: 2px solid var(--hoverblue);
+input[type='text'], input[type='number']{
+  border: 2px solid var(--blue);
   outline: none;
+  transition: 200ms;
+  &:focus{
+    border: 2px solid var(--hoverblue);
+  }
 }
 
 img{
@@ -264,7 +276,6 @@ ul{
     text-align: center;
   }
 }
-
 
 #create{
   text-align: center;
