--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -8,6 +8,16 @@
   src: url("./../fonts/Now-Regular.otf");
 }
 
+@font-face {
+  font-family: 'James';
+  src: url("./../fonts/James.ttf");
+}
+
+@font-face {
+  font-family: 'Comic';
+  src: url("./../fonts/comic.ttf");
+}
+
 :root {
   --blue: #6aa4db;
   --hoverblue: #0575e6;
@@ -152,7 +162,7 @@ button:hover {
           box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: Now;
+  font-family: Comic;
   font-weight: 300;
   caret-color: var(--blue);
 }
@@ -423,76 +433,6 @@ button:disabled {
   gap: 5px;
 }
 
-.ticontainer {
-  background: #26313d;
-  padding: 10px 15px;
-  border-radius: 25px;
-  font-size: 0.7rem;
-  width: -webkit-min-content;
-  width: -moz-min-content;
-  width: min-content;
-  height: 33px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.tiblock {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  height: 17px;
-  width: -webkit-min-content;
-  width: -moz-min-content;
-  width: min-content;
-}
-
-.ticontainer .tidot {
-  background-color: #90949c;
-}
-
-.tidot {
-  -webkit-animation: mercuryTypingAnimation 1.5s infinite ease-in-out;
-  border-radius: 10px;
-  display: inline-block;
-  height: 5px;
-  margin-right: 3px;
-  width: 5px;
-}
-
-@-webkit-keyframes mercuryTypingAnimation {
-  0% {
-    -webkit-transform: translateY(0px);
-  }
-  28% {
-    -webkit-transform: translateY(-5px);
-  }
-  44% {
-    -webkit-transform: translateY(0px);
-  }
-}
-
-.tidot:nth-child(1) {
-  -webkit-animation-delay: 200ms;
-}
-
-.tidot:nth-child(2) {
-  -webkit-animation-delay: 300ms;
-}
-
-.tidot:nth-child(3) {
-  -webkit-animation-delay: 400ms;
-}
-
 #sendlocation {
   -webkit-filter: invert(1);
           filter: invert(1);
@@ -754,7 +694,7 @@ button:disabled {
   position: absolute;
   bottom: 100px;
   left: 50%;
-  background: var(--background-light);
+  background: #00000072;
   padding: 10px;
   border-radius: 15px;
   -webkit-backdrop-filter: blur(2px);
@@ -837,6 +777,7 @@ button:disabled {
   height: 30px;
   width: 30px;
   text-align: center;
+  font-family: Now;
   font-size: 1rem;
   font-weight: 900;
   color: grey;
