--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -8,6 +8,17 @@
   src: url('./../fonts/Now-Regular.otf');
 }
 
+@font-face {
+  font-family: 'James';
+  src: url('./../fonts/James.ttf');
+}
+
+@font-face {
+  font-family: 'Comic';
+  src: url('./../fonts/comic.ttf');
+}
+
+
 :root{
   --blue: #6aa4db;
   --hoverblue: #0575e6;
@@ -114,7 +125,7 @@ button:hover {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: Now;
+  font-family: Comic;
   font-weight: 300;
   caret-color: var(--blue);
 }
@@ -278,7 +289,6 @@ scrollbar-width: none;  /* Firefox */
   width: 60%;
   transition: 200ms;
   z-index: 11;
-
   .chat__sidebar{
     width: 100%;
     border: none;
@@ -320,7 +330,6 @@ scrollbar-width: none;  /* Firefox */
   }
 }
 
-
 .menuwrapper2{
   display: none;
 }
@@ -339,59 +348,6 @@ scrollbar-width: none;  /* Firefox */
   }
 }
 
-.ticontainer{
-  background: #26313d;
-  padding: 10px 15px;
-  border-radius: 25px;
-  font-size: 0.7rem;
-  width: min-content;
-  height: 33px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.tiblock {
-  align-items: center;
-  display: flex;
-  height: 17px;
-  width: min-content;
-}
-
-.ticontainer .tidot {
-  background-color: #90949c;
-}
-
-.tidot {
-  -webkit-animation: mercuryTypingAnimation 1.5s infinite ease-in-out;
-  border-radius: 10px;
-  display: inline-block;
-  height: 5px;
-  margin-right: 3px;
-  width: 5px;
-}
-
-@-webkit-keyframes mercuryTypingAnimation{
-0%{
--webkit-transform:translateY(0px)
-}
-28%{
--webkit-transform:translateY(-5px)
-}
-44%{
--webkit-transform:translateY(0px)
-}
-}
-
-.tidot:nth-child(1){
--webkit-animation-delay:200ms;
-}
-.tidot:nth-child(2){
--webkit-animation-delay:300ms;
-}
-.tidot:nth-child(3){
--webkit-animation-delay:400ms;
-}
 
 #sendlocation{
   filter: invert(1);
@@ -559,7 +515,7 @@ scrollbar-width: none;  /* Firefox */
   position: absolute;
   bottom: 100px;
   left: 50%;
-  background: var(--background-light);
+  background: #00000072;
   padding: 10px;
   border-radius: 15px;
   backdrop-filter: blur(2px);
@@ -621,6 +577,7 @@ scrollbar-width: none;  /* Firefox */
   height: 30px;
   width: 30px;
   text-align: center;
+  font-family: Now;
   font-size: 1rem;
   font-weight: 900;
   color: grey;
